fix: textarea word-spacing 제거

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,14 @@ body {
       // outline: 1px solid blue;
     }
   }
-
+  textarea {
+    -webkit-touch-callout: auto;
+    -webkit-user-select: auto;
+    -khtml-user-select: auto;
+    -moz-user-select: auto;
+    -ms-user-select: auto;
+    user-select: auto;
+}
 
 }
 
